--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -8,7 +8,7 @@ $primary-font	: 'Poppins', sans-serif;
 $primary-color	: #0086A5;
 $secondary-color: #1271a4;
 $title-color	: #222222;
-$text-color		: #777777;
+$text-color		: #585858;
 
 $white			: #fff;
 $offwhite		: #f9f9ff;
